更新+换电脑

--- a/前端/JS/（1）基础知识.md
+++ b/前端/JS/（1）基础知识.md
@@ -149,3 +149,76 @@ let fn2 = function fn1() {
 }
 fn2()
 ```
+
+## 闭包
+
+函数 A 内部有一个函数 B，函数 B 可以访问到函数 A 中的变量，那么函数 B 就是闭包
+
+循环打印1, 2, 3, 4, 5
+```
+for (var i = 1; i <= 5; i++) {
+  setTimeout(function timer() {
+    console.log(i)
+  }, i * 1000)
+}
+```
+**解决方法**
+1. var 改用 let。 `优先使用`
+2. 使用闭包，自执行函数，将i作为参数传入
+3. 使用setTimeout第三个参数，会作为第一个参数（函数）的参数
+
+## 深拷贝
+
+**JSON.parse(JSON.stringify(object))**
+
+局限性:
+
+  1. 会忽略undefined
+  2. 会忽略symbol
+  3. 不能序列化函数(直接忽略)
+  4. 不能解决循环引用的对象
+
+JSON.stringify()
+
+1. 第二个参数为函数，参考demo，为数组是，当key值存在数组中的，才返回，其他的过滤
+2. 第三个参数是控制结果的缩进的，如果为数字，则缩进为2，更深层递加，最多10个空格，如果是字符串，则会缩进为该字符串（最多字符串的前10个字符）
+```
+var data = {
+  name:"niuzai",
+  info:{
+    age:18,
+    sex:"male"
+  }
+};
+
+// 第二个参数为函数时：
+
+JSON.stringify(data, function(key, val){
+  console.log("key is %s", key);
+  console.log("val is %s", typeof(val));
+  return val;
+});
+//key is
+//key is
+//val is object
+//key is name
+//val is string
+//key is info
+//val is object
+//key is age
+//val is number
+//key is sex
+//val is string
+"{"name":"niuzai","info":{"age":18,"sex":"male"}}"
+
+// 第二个参数为数字组时：
+JSON.stringify(data, ["name", "info", "sex"]);
+
+//age由于不在列表里，所以没被序列化
+//"{"name":"niuzai","info":{"sex":"male"}}"
+```
+> 如果第二个参数，不返回val的话，后面也不会再进行遍历，
+
+**MessageChannel**
+
+`MessageChannel`也可以进行深拷贝，可以拷贝undefined 和循环应用
