--- a/前端/JS/（1）基础知识.md
+++ b/前端/JS/（1）基础知识.md
@@ -36,7 +36,7 @@ alert(obj) // string.目前发现alert是优先调用toString的
 1 + obj // 1value
 "a" + obj // avalue
 ```
-1. 如果重写了toString方法，没哟重写valueOf方法，则优先调用toString
+1. 如果重写了toString方法，没有重写valueOf方法，则优先调用toString
 ```
 var obj = {
   toString () {
@@ -66,8 +66,9 @@ console.log(1 + obj)
 Uncaught TypeError: Cannot convert object to primitive value
 ```
 
-5. 如果有定义了`Symbol.toPrimitive`方法，则会最优先调用,如果`Symbol.toPrimitive`方法返回的也不是原始类型，也同样报错
+5. 如果有定义了`Symbol.toPrimitive`方法，则会有先调用（后面也不会去调用valueOf, toString了）,如果`Symbol.toPrimitive`方法返回的也不是原始类型，也同样报错
 
+Primitive // 原始的
 ```
 var obj = {
   toString () {
@@ -182,7 +183,7 @@ JSON.stringify()
 
 1. 第二个参数为函数，参考demo，为数组是，当key值存在数组中的，才返回，其他的过滤
 2. 第三个参数是控制结果的缩进的，如果为数字，则缩进为2，更深层递加，最多10个空格，如果是字符串，则会缩进为该字符串（最多字符串的前10个字符）
-```
+```js
 var data = {
   name:"niuzai",
   info:{
@@ -198,7 +199,8 @@ JSON.stringify(data, function(key, val){
   console.log("val is %s", typeof(val));
   return val;
 });
-//key is
+
+// 首先会打印个空Key, 和自身，再循环答应key, value
 //key is
 //val is object
 //key is name
