更新基础点

--- a/前端/JS/（1）基础知识.md
+++ b/前端/JS/（1）基础知识.md
@@ -223,4 +223,40 @@ JSON.stringify(data, ["name", "info", "sex"]);
 
 **MessageChannel**
 
-`MessageChannel`也可以进行深拷贝，可以拷贝undefined 和循环应用
+`MessageChannel`也可以进行深拷贝，可以拷贝undefined 和循环引用, Symbol不可被拷贝,而且拷贝的对象不能有Symbol,否则会报错。
+
+```js
+function structuralClone(obj) {
+  return new Promise(resolve => {
+    const { port1, port2 } = new MessageChannel;
+    port1.onmessage = event => resolve(event.data)
+    port2.postMessage(obj);
+  })
+}
+
+let obj = {
+  a: 1,
+  b: {
+    c: 2
+  },
+  e: undefined,
+  f: Symbol('hello'),
+}
+
+obj.b.d = obj.b
+
+const test = async () => {
+  const result = await structuralClone(obj)
+  console.log('克隆的结果', result)
+}
+
+test();
+```
+
+### 原型
+
+1. 每个js对象都有`__proto_`_属性，已经不推荐直接使用.
+
+
+### 继承
+
