--- a/前端/JS/（1）基础知识.md
+++ b/前端/JS/（1）基础知识.md
@@ -253,6 +253,8 @@ const test = async () => {
 test();
 ```
 
+函数声明提升就为了解决函数互相调用
+
 ### 原型
 
 1. 每个js对象都有`__proto_`_属性，已经不推荐直接使用.
@@ -260,3 +262,78 @@ test();
 
 ### 继承
 
+**原型继承**
+
+特点：
+- 无法多继承
+- 原型对象属性都被所有实例共享（也是缺点）
+- 无法向父类传参
+
+
+**构造函数继承**
+
+特点:
+- 可以多继承
+- 可以传参
+- 属性不被共享, 导致如果属性是函数不被复用
+- 无法继承父类原型
+- 实例都是子类实例,不是父类实例
+
+**组合继承**
+
+特点：
+- 继承了父类的属性（属性不共用）和方法
+- 但是会父类属性会继承2次，造成浪费
+
+```js
+function Parent(value){
+  this.name = value
+}
+
+Parent.prototype.getName = function(){
+  console.log(this.name)
+}
+
+function Child(value){
+  Parent.call(this, value); // 继承父元素的属性
+}
+
+Child.prototype = new Parent(); // 将父元素的自身属性和原型上方法都继承了
+
+const child = new Child('康康');
+
+child.getName()
+```
+
+**寄生组合继承**
+
+- 完美的继承
+  
+```js
+function Parent(value){
+  this.name = value
+}
+
+Parent.prototype.getName = function(){
+  console.log(this.name)
+}
+
+function Child(value){
+  Parent.call(this, value); // 继承父元素的属性
+}
+
+Child.prototype = Object.create(Parent.prototype,{
+  constructor: {
+    value: Child,
+    enumerable: false,
+    writable: true,
+    configurable: true
+  }
+})
+
+const child = new Child('康康');
+child.getName()
+```
+
+1. `instanceof` 显示是不是目标的实例。
+2. `Object.create`,参数1是`原型对象`, 参数二为原型对象上的属性，或者值的修改。
