--- a/前端/JS/（1）基础知识.md
+++ b/前端/JS/（1）基础知识.md
@@ -337,3 +337,38 @@ child.getName()
 
 1. `instanceof` 显示是不是目标的实例。
 2. `Object.create`,参数1是`原型对象`, 参数二为原型对象上的属性，或者值的修改。
+
+### new发生的过程
+
+```js
+function create(Con, ...args) {
+  let obj = {}
+  Object.setPrototypeOf(obj, Con.prototype)
+  let result = Con.apply(obj, args)
+  return result instanceof Object ? result : obj
+}
+```
+**new的过程**
+1. 第一个参数是构造函数，后面参数不限
+2. 创建一个空对象`obj,obj.__proto__ = 构造函数的.prototype`
+3. 将obj的`this绑定到构造函数上`，并传入参数
+4. `判断构造函数返回的值是否是对象`，如果是则返回，如果不是则返回Obj
+
+```js
+function myFunction(arg){
+  return {
+    name: 'kangkang'
+  }
+}
+let obj = new myFunction()
+console.log(obj.name) // kangkang
+```
+
+```js
+function myFunction(arg){
+  this.name = 'shuangshuang'
+  return 'kangkang'
+}
+let obj = new myFunction()
+console.log(obj.name) // shuangshuang
+```
